--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -96,7 +96,7 @@
   assignments of the variable introduced by the indefinite. Typological research
   (Haspelmath 1997) showed that indefinites have different functional distributions
   with respect to these uses. In this work, we present a formal framework where Farkas
-  & Brasoveanu (2020)’s ideas are rigorously formalized. We develop a two-sorted
+  & Brasoveanu (2020)'s ideas are rigorously formalized. We develop a two-sorted
   team semantics which integrates both scope and epistemic effects. We apply the
   framework to explain typological variety of indefinites, their restricted distribution
   and licensing conditions, and some diachronic developments of indefinite forms.
@@ -196,7 +196,7 @@
   Free choice inferences represent a much discussed case of a divergence between logic and language (Kamp 1973, Zimmermann 2000).
   Grice influentially argued that the assumption that such divergence does in fact exist is a mistake originating “from inadequate attention
   to the nature and importance of the conditions governing conversation” (Grice 1989: 24). I will first show that when applied to free choice
-  phenomena, the standard implementation of Grice’s view, representing semantics and pragmatics as two separate components, is empirically
+  phenomena, the standard implementation of Grice's view, representing semantics and pragmatics as two separate components, is empirically
   inadequate. I will then propose a different account: a bilateral state-based modal logic modelling next to literal meanings also pragmatic
   factors and the additional inferences that arise from their interaction. The pragmatic factor I will consider connects to a tendency of
   language users to neglect empty configurations when engaging in linguistic interpretation. The non-emptiness atom (ne) from team semantics
@@ -270,12 +270,12 @@
 @incollection{Aloni2016a,
   abstract = {
   This article proposes an account of knowing-who constructions within a
-  generalisation of Hintikka’s (1962) quantified epistemic logic employing the notion
+  generalisation of Hintikka's (1962) quantified epistemic logic employing the notion
   of a conceptual cover (Aloni, 2001). The proposed logical system captures the inherent context-sensitivity of
   knowing-wh constructions (Boer and Lycan, 1985), as well as expresses non-trivial cases of so-called concealed questions (Heim, 1979).
   Assuming that quantifying into epistemic contexts and knowing-who are linked in the way Hintikka had proposed, the context dependence
   of the latter will translate into a context dependence of de re attitude ascriptions and this will result in a ready account of a number
-  of traditionally problematic cases including Quine’s well-known double vision puzzles (Quine, 1956).
+  of traditionally problematic cases including Quine's well-known double vision puzzles (Quine, 1956).
   },
   author    = {Aloni, Maria},
   booktitle = {Jaakko Hintikka on Knowledge and Game Theoretical Semantics},
@@ -320,10 +320,10 @@
 
 @incollection{AloniCiardelli2013,
   abstract = {
-  Since Ross’s observation that the instruction 'Post this letter' does not entail 'Post this
+  Since Ross's observation that the instruction 'Post this letter' does not entail 'Post this
   letter or burn it', imperatives have constituted a challenge for the logician. Building on ideas
   from inquisitive semantics, we propose an account in which imperatives are regarded as
-  partial specifications of a set of options. We show that this account avoids Ross’s paradox
+  partial specifications of a set of options. We show that this account avoids Ross's paradox
   and gives rise to a sensible notion of imperative entailment.
   },
   author = {Aloni, Maria and Ciardelli, Ivano},
@@ -396,8 +396,8 @@
   study on indefinites. The study covered five indefinite expressions, each in a different language. The
   main goal of the study was to verify the distribution of these indefinites synchronically and to attest
   their historical development. The methodology we used is a form of functional labeling which combines both context
-  (syntax) and meaning (semantics) using as a starting point Haspelmath’s (1997) functional map. In the article we identify
-  Haspelmath’s functions with logico-semantic interpretations and propose a binary branching decision tree assigning each
+  (syntax) and meaning (semantics) using as a starting point Haspelmath's (1997) functional map. In the article we identify
+  Haspelmath's functions with logico-semantic interpretations and propose a binary branching decision tree assigning each
   instance of an indefinite exactly one function in the map.
   },
   author = {Aguilar-Guevara, Ana and Aloni, Maria and Port, Angelika and \v{S}im\'{i}k, R. and de Vos, M. and Zeijlstra, H.},
@@ -450,7 +450,7 @@
   abstract = {
   The goal of this paper is to explain the meaning and distribution of indefinites in comparatives, focusing on English some and any
   and German irgend-indefinites. We consider three competing theories of comparatives in combination with an alternative semantics of
-  some and any, and a novel account of stressed irgend-indefinites. One of the resulting accounts, based on Heim’s analysis of comparatives,
+  some and any, and a novel account of stressed irgend-indefinites. One of the resulting accounts, based on Heim's analysis of comparatives,
   predicts all the relevant differences in quantificational force, and explains why free choice indefinites are licensed in comparatives.
   },
   author = {Aloni, Maria and Roelofsen, Floris},
@@ -514,8 +514,8 @@
   abstract = {
   The article presents a formal analysis in the framework of bi-directional optimality theory of the free choice,
   ignorance and indifference implicatures conveyed by the use of indefinite expressions or disjunctions. Ignorance
-  is expressed by standard means of epistemic logic. To express indifference we use Groenendijk and Stokhof’s question
-  meanings. To derive implicature, Grice’s conversational maxims, and an additional principle expressing preferences
+  is expressed by standard means of epistemic logic. To express indifference we use Groenendijk and Stokhof's question
+  meanings. To derive implicature, Grice's conversational maxims, and an additional principle expressing preferences
   for minimal models, are formulated as violable constraints used to select optimal candidates out of a set of alternative
   sentence-context pairs. The implicatures of an utterance of φ are then defined as the sentences which are entailed by any
   optimal context for φ (but not by φ itself). Entailment is defined in a version of update semantics where contextual
@@ -731,7 +731,7 @@
   of Karttunen (1977), Heim (1994), Lahiri (2002), Spector & Egré (2015), among
   others, and the twin relations theory of George (2011).
   On the other hand, our account also addresses the main limitation of Groenendijk
-  & Stokhof’s (1984) proposal, which is that it is primarily designed to derive strongly
+  & Stokhof's (1984) proposal, which is that it is primarily designed to derive strongly
   exhaustive readings for interrogative complements. Our account is more flexible in
   that it straightforwardly derives non-exhaustive and intermediate exhaustive readings
   as well.
@@ -781,10 +781,10 @@
 @article{Aloni2016Grazer,
   abstract = {
   The article discusses the interpretation of indexicals within the framework of quantified modal logic. The dominant theory on this topic is
-  Kaplan’s two-dimensional analysis. Since its appearance in 1977, Kaplan’s analysis has been challenged on various grounds. I will argue that
+  Kaplan's two-dimensional analysis. Since its appearance in 1977, Kaplan's analysis has been challenged on various grounds. I will argue that
   by revising the way of modelling the objects we refer to in conversation,
-  we can account for counterexamples to Kaplan’s theory, while maintaining
-  Kaplan’s basic insights concerning the meaning of 'you' and 'I'.
+  we can account for counterexamples to Kaplan's theory, while maintaining
+  Kaplan's basic insights concerning the meaning of 'you' and 'I'.
   },
   author = {Maria Aloni},
   journal = {Grazer Philosophische Studien},
@@ -814,7 +814,7 @@
 
 @article{AloniEgre2010,
   abstract = {
-  We discuss the ‘problem of convergent knowledge’, an argument presented by J. Schaffer in favour of contextualism about
+  We discuss the ‘problem of convergent knowledge', an argument presented by J. Schaffer in favour of contextualism about
   knowledge attributions, and against the idea that knowledge‐wh can be simply reduced to knowledge of the proposition answering
   the question. Schaffer's argument centrally involves alternative questions of the form 'whether A or B'. We propose an analysis
   of these on which the problem of convergent knowledge does not arise. While alternative questions can contextually restrict the
@@ -893,7 +893,7 @@ inproceedings{Aloni2018a,
 
 @incollection{AloniJacinto2014,
   abstract = {
-  In this article we investigate how conceptual perspectives and context interact in the determination of the truth of sentences in which ‘knowing-wh’ constructions occur.
+  In this article we investigate how conceptual perspectives and context interact in the determination of the truth of sentences in which ‘knowing-wh' constructions occur.
   },
   author = {Maria Aloni and Bruno Jacinto},
   title = {Knowing who: How perspectives and context interact},
