--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -36,12 +36,23 @@
 }
 
 
-@article{DeganoAloni2025,  
+@article{DeganoAloni2025, 
+abstract = {Indefinites are known to give rise to different scopal (specific vs. non-specific) and epistemic (known vs. unknown) uses. 
+Farkas and Brasoveanu (Wiley Blackwell Compan. Semant. 1--26, 2020) explain these specificity distinctions in terms of stability vs. 
+variability in value assignments of the variable introduced by the indefinite. Typological research (Haspelmath in Indefinite pronouns. 
+Oxford University Press, 1997) shows that indefinites have different functional distributions with respect to these uses. In this work, 
+we present a formal framework where Farkas and Brasoveanu (Wiley Blackwell Compan. Semant. 1--26, 2020's) ideas are rigorously 
+formalized. We develop a two-sorted team semantics that integrates both scope and epistemic effects. We apply the framework to explain 
+the typological variety of indefinites, showing that only lexicalized indefinites have convex meanings in our system (G{\"a}rdenfors 
+in The geometry of meaning: semantics based on conceptual spaces. MIT Press, 2014; Steinert-Threlkeld et al. Semant. Pragmat. 16:1-EA,
+2023). We account for the restricted distribution and licensing conditions of different indefinites, and we focus on a particular class 
+of indefinites, called epistemic indefinites (Alonso-Ovalle and Men{\'e}ndez-Benito in Epistemic indefinites: exploring modality beyond 
+the verbal domain. Oxford University Press, 2015).},
   author = {Degano, Marco and  Aloni, Maria},
   id = {Degano2025},
   journal = {Linguistics and Philosophy},
   title = {How to be (non-)specific}, 
-  notes = {Accepted},
+  doi = {10.1007/s10988-025-09442-y},
   year = {2025}
 }
 
