--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -24,12 +24,13 @@
   booktitle = {Proceedings of Sinn und Bedeutung (SuB) 29},
   title = {Neglect-Zero Effects in the Interpretation of Quantifiers and Disjunction},
   year = {2024},
-  notes = {Accepted}
+  pages = {214--232},
+  external = {https://ojs.ub.uni-konstanz.de/sub/index.php/sub/article/view/1206/1162}
 }
 
 @inproceedings{Yanal2024,
   author = {Jialiang Yan and Maria Aloni and Fenrong Liu},
-  booktitle = {Proceedings of   AWPL 2024},
+  booktitle = {Proceedings of  6th Asian Workshop on Philosophical Logic (AWPL) 2024},
   title = {Perspective Shifts: Formalizing Epistemic Might in Multi-agent Models.},
   year = {2024},
   notes = {Accepted}
