--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -1018,8 +1018,10 @@ inproceedings{Aloni2015a,
   editor = {Edward N. Zalta},
   year = {2016},
   external = {https://plato.stanford.edu/entries/disjunction/},
- note = {The 2016 edition of this SEP entry was translated into Chinese by Xiaofei Liu (East China Normal University) and 
-Liuhua Zhang (East China Normal University), and published in an number of Thought and Culture in 2024.}
+  note = {
+  The 2016 edition of this SEP entry was translated into Chinese by Xiaofei Liu (East China Normal University) and 
+  Liuhua Zhang (East China Normal University), and published in an number of Thought and Culture in 2024.
+  },
   publisher  =  {Metaphysics Research Lab, Stanford University}
 }
 
@@ -1030,7 +1032,7 @@ Liuhua Zhang (East China Normal University), and published in an number of Thoug
   volume = {33},
   editor = {Yang Guorong},
   year = {2024},
- note = {Translated into Chinese by Xiaofei Liu (East China Normal University)},
+  note = {Translated into Chinese by Xiaofei Liu (East China Normal University)},
   publisher  =  {Shanghai: East China Normal University Press}
 }
 
